working video clips from S3

--- a/src/pages/play/index.astro
+++ b/src/pages/play/index.astro
@@ -129,7 +129,12 @@ const gameClips: CarouselClip[] = [
   {
     url: "/game-clips/haaland.webm",
     title: "FC24",
-    desc: "Why is everyone online Real Madrid?",
+    desc: "Why is everyone online using Real Madrid?",
+  },
+  {
+    url: "/game-clips/olliolli.webm",
+    title: "OlliOlli World",
+    desc: "Rad",
   },
 ].map((item) => ({ ...item, url: `${s3Path}${item.url}`, alt: item.title }));
 
@@ -219,7 +224,7 @@ const topTravelImages = shuffle(travelImages.slice()).slice(0, 7);
       </div>
     </div>
     <p class="text-base mt-6">
-      Recently, I upgraded to a PS5 as well, and FC24 has been a great gateway drug into the EPL. Instead of catching real highlights, check out some of my game footage.
+      Lorem ipsum next gen blah blah use this as an example of having video clips
     </p>
     <div
     tabindex="0"
