--- a/src/pages/play/index.astro
+++ b/src/pages/play/index.astro
@@ -1,18 +1,18 @@
 ---
 import Layout from "../../layouts/Layout.astro";
 // TODO: move this to a dynamic location/api
-import type { CarouselClip, CarouselImage } from "../../components/Carousel";
-import Carousel, { VideoCarousel } from "../../components/Carousel";
+import type { CarouselImage } from "../../components/Carousel";
+import Carousel from "../../components/Carousel";
 import FullCarousel from "../../components/FullCarousel";
+import { WordCloud } from "../../components/MusicGenres/WordCloud";
 import json from "../../data/spotify-artists.json";
-import type { SpotifyArtists } from "../../types/spotify-artists";
 import {
-  travelImages2023,
-  travelImages2022,
-  travelImagesOlder,
+travelImages2022,
+travelImages2023,
+travelImagesOlder,
 } from "../../data/travelImages";
 import type { FullCarouselImage } from "../../types/images";
-import { WordCloud } from "../../components/MusicGenres/WordCloud";
+import type { SpotifyArtists } from "../../types/spotify-artists";
 
 // Copied, see https://stackoverflow.com/a/2450976/9641551
 // warning: mutates
@@ -115,28 +115,7 @@ const gameScreensSeed: CarouselImage[] = [
 ].map((item) => ({ ...item, url: `${s3Path}${item.url}`, alt: item.title }));
 
 
-const gameClips: CarouselClip[] = [
-  {
-    url: "/game-clips/de-bruyne.webm",
-    title: "FC24",
-    desc: "Sorry Courtois",
-  },
-  {
-    url: "/game-clips/foden.webm",
-    title: "FC24",
-    desc: "Sorry Courtois, again!",
-  },
-  {
-    url: "/game-clips/haaland.webm",
-    title: "FC24",
-    desc: "Why is everyone online using Real Madrid?",
-  },
-  {
-    url: "/game-clips/olliolli.webm",
-    title: "OlliOlli World",
-    desc: "Rad",
-  },
-].map((item) => ({ ...item, url: `${s3Path}${item.url}`, alt: item.title }));
+
 
 // TODO: move these to a dynamic location/api
 const len = 3;
@@ -223,21 +202,5 @@ const topTravelImages = shuffle(travelImages.slice()).slice(0, 7);
         </div>
       </div>
     </div>
-    <p class="text-base mt-6">
-      Lorem ipsum next gen blah blah use this as an example of having video clips
-    </p>
-    <div
-    tabindex="0"
-    class="collapse collapse-plus my-6 h-1/2 max-w-full shadow-xl rounded-2xl bg-base-200 p-8"
-  >
-    <input type="checkbox" />
 
-    <div class="collapse-title text-xl font-medium">
-      Show me the clips!
-    </div>
-    <div class="collapse-content">
-      <div class="my-6 h-1/2 max-w-full">
-        <VideoCarousel clips={gameClips} />
-      </div>
-    </div>
 </Layout>
