--- a/src/pages/work/story.astro
+++ b/src/pages/work/story.astro
@@ -118,7 +118,7 @@ const berlinImages: CarouselImage[] = [
     </p>
     <img
       class="object-contain my-6 shadow-xl rounded-2xl bg-base-300 p-4 mx-auto"
-      src="/story/toronto.jpg"
+      src=`${s3Path}/story/toronto.jpg`
       alt="Toronto"
     />
   </div>
