add 2024 travel images

--- a/src/layouts/PhotographyLayout.astro
+++ b/src/layouts/PhotographyLayout.astro
@@ -6,6 +6,10 @@ export interface Props {
 const { year } = Astro.props;
 const pages = [
   {
+    href: "/play/photography/2024",
+    label: "2024",
+  },
+  {
     href: "/play/photography/2023",
     label: "2023",
   },
