--- a/src/pages/work/story.astro
+++ b/src/pages/work/story.astro
@@ -87,7 +87,7 @@ const berlinImages: CarouselImage[] = [
       <a
         class="badge badge-info"
         href="https://www.crackingthecodinginterview.com/"
-        target="_blank">cracking the coding intreview</a
+        target="_blank">cracking the coding interview</a
       >
       would be. Unfortunately, I was not aware of the book at the time, and also
       did not have the background in computer science. After many failed attempts,
