--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -122,19 +122,19 @@ const tiles: Tile[] = [
     imageSrc: sideImg,
     type: "study",
   },
-  {
-    company: "",
-    title: "Resource checkout tool",
-    desc: "Manage sharing resources with a team",
-    imageSrc: resourceCheckoutImg,
-    links: [
-      "https://resource-checkout-v3.vercel.app/",
-      "https://github.com/mtanzim/resource-checkout-v3",
-    ],
-    linkTitles: ["App", "Code"],
+  // {
+  //   company: "",
+  //   title: "Resource checkout tool",
+  //   desc: "Manage sharing resources with a team",
+  //   imageSrc: resourceCheckoutImg,
+  //   links: [
+  //     "https://resource-checkout-v3.vercel.app/",
+  //     "https://github.com/mtanzim/resource-checkout-v3",
+  //   ],
+  //   linkTitles: ["App", "Code"],
 
-    type: "side",
-  },
+  //   type: "side",
+  // },
   {
     company: "",
     title: "Spotify listening habits",
