--- a/src/pages/work/index.astro
+++ b/src/pages/work/index.astro
@@ -2,7 +2,7 @@
 import Layout from "../../layouts/Layout.astro";
 import CodingWrapped from "../../components/CodingStats/CodingWrapped.astro";
 import flippImg  from "../../assets/work/flipp.png"
-import cohereGif  from "../../assets/work/cohere.gif"
+import cohereImg  from "../../assets/work/cohere.png"
 import cfImg  from "../../assets/work/cf.jpg"
 import moofareImg  from "../../assets/work/moonfare.jpeg"
 import diginexImg  from "../../assets/work/diginex.png"
@@ -194,7 +194,7 @@ const tiles: Tile[] = [
     company: "Cohere",
     title: "Member of technical staff",
     desc: "Currently, I'm helping expose the power of LLMs and RAGs to developers and enterprise customers",
-    imageSrc: cohereGif,
+    imageSrc: cohereImg,
     links: ["https://cohere.com/"],
     linkTitles: ["Visit"],
 
