move data to s3

--- a/src/components/CodingStats/CodingWrapped.astro
+++ b/src/components/CodingStats/CodingWrapped.astro
@@ -46,6 +46,10 @@ const fetchWithMonths = async (months: number) => {
   return languageData?.percentages;
 };
 
+const colors = await fetch("https://tm-photo-portfolio.s3.amazonaws.com/website-assets/data/colors.json")
+  .then(res => res.json())
+  .catch(console.error)
+console.log({colors})
 let dataSet;
 try {
   const data = await Promise.all(
@@ -61,10 +65,10 @@ try {
 ---
 
 {
-  dataSet && (
+  dataSet && colors && (
     <div class="text-center shadow-xl rounded-2xl bg-base-200 p-4">
       <div class="md:w-96 py-4  my-4 mx-auto">
-        <Coding client:visible dataSet={dataSet} topN={7} />
+        <Coding client:visible dataSet={dataSet} colors={colors} topN={7} />
       </div>
       <small>
         Powered by{" "}
