--- a/src/components/PhotoWithModal.astro
+++ b/src/components/PhotoWithModal.astro
@@ -23,7 +23,10 @@ const size = 800;
       Close
     </button>
   </dialog>
-  <div class="md:tooltip md:tooltip-bottom md:tooltip-primary mb-4" data-tip={alt}>
+  <div
+    class="md:tooltip md:tooltip-bottom md:tooltip-primary mb-4"
+    data-tip={alt}
+  >
     <Image
       src={imageSrc}
       alt={alt}
