--- a/src/layouts/PhotographyLayout.astro
+++ b/src/layouts/PhotographyLayout.astro
@@ -39,7 +39,8 @@ const pages = [
           class="md:tooltip"
           data-tip="Get in touch regarding originals and prints"
           href="mailto:mtanzim@gmail.com?subject=Inquiries about your photos"
-          target="_blank">Contact</a>
+          target="_blank">Contact</a
+        >
       </li>
     </ul>
   </div>
