--- a/src/pages/chat/index.astro
+++ b/src/pages/chat/index.astro
@@ -8,10 +8,8 @@ import { ChatWithHistory } from "../../components/ChatWithHistory";
     Disclaimer: AI may produce incorrect information
   </div>
   <div class="badge md:badge-lg badge-outline badge-info my-4 ml-4">
-    <a href="https://cohere.com/" target="_blank">
-      Powered by Cohere
-    </a>
-    </div>
+    <a href="https://cohere.com/" target="_blank"> Powered by Cohere </a>
+  </div>
   <p class="text-base mb-8">
     You can ask an AI questions about this website and a few affiliated pages.
     Please beware that this is quite experimental and the performance, stability
