--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -24,7 +24,11 @@ import { Image } from "astro:assets";
         </p>
       </div>
       <div class="divider lg:divider-horizontal"></div>
-      <Image alt="Tanzim" src={tanzimImg} class="max-w-xs rounded-lg shadow-2xl" />
+      <Image
+        alt="Tanzim"
+        src={tanzimImg}
+        class="max-w-xs rounded-lg shadow-2xl"
+      />
     </div>
   </div>
 </Layout>
