--- a/src/pages/play/index.astro
+++ b/src/pages/play/index.astro
@@ -5,12 +5,11 @@ import type { CarouselImage } from "../../components/Carousel";
 import Carousel from "../../components/Carousel";
 import FullCarousel from "../../components/FullCarousel";
 import { WordCloud } from "../../components/MusicGenres/WordCloud";
-import json from "../../data/spotify-artists.json";
 import {
-travelImages2022,
-travelImages2023,
-travelImages2024,
-travelImagesOlder,
+  travelImages2022,
+  travelImages2023,
+  travelImages2024,
+  travelImagesOlder,
 } from "../../data/travelImages";
 import type { FullCarouselImage } from "../../types/images";
 import type { SpotifyArtists } from "../../types/spotify-artists";
@@ -36,7 +35,6 @@ function shuffle<T>(array: T[]): T[] {
 
   return array;
 }
-
 
 const s3Path = "https://tm-photo-portfolio.s3.amazonaws.com/website-assets";
 const topAlbumSeed: CarouselImage[] = [
@@ -76,7 +74,7 @@ const topAlbumSeed: CarouselImage[] = [
     url: "/albums/sos.jpeg",
     title: "SZA - SOS",
   },
-].map((item) => ({...item, url: `${s3Path}${item.url}`, alt: item.title }));
+].map((item) => ({ ...item, url: `${s3Path}${item.url}`, alt: item.title }));
 
 const gameScreensSeed: CarouselImage[] = [
   {
@@ -109,17 +107,30 @@ const gameScreensSeed: CarouselImage[] = [
     title: "Super Mario Bros Wonder",
     desc: "This has to be the most fun game ever made!",
   },
+  {
+    url: "/game-screens/b04.jpg",
+    title: "FC24",
+    desc: "Also undefeated online with B04",
+  },
+  {
+    url: "/game-screens/haaland.jpg",
+    title: "FC24",
+    desc: "Haaland has zero struggles scoring in the game",
+  },
+  {
+    url: "/game-screens/pep.jpg",
+    title: "FC24",
+    desc: "Find someone that looks at you the way Pep does <3",
+  },
 ].map((item) => ({ ...item, url: `${s3Path}${item.url}`, alt: item.title }));
-
-
-
+// .filter(item => item.title === "FC24")
 
 // TODO: move these to a dynamic location/api
 const len = 3;
 const topAlbumImgs = shuffle<CarouselImage>(topAlbumSeed.slice()).slice(0, len);
 const gameScreens = shuffle<CarouselImage>(gameScreensSeed.slice()).slice(
   0,
-  len
+  len,
 );
 
 const gameTitleSet = new Set<string>();
@@ -132,6 +143,11 @@ const travelImages: FullCarouselImage[] = travelImages2024
   .concat(travelImagesOlder);
 
 const topTravelImages = shuffle(travelImages.slice()).slice(0, 7);
+const spotifyData = await fetch(
+  "https://tm-photo-portfolio.s3.amazonaws.com/website-assets/data/spotify-artists.json",
+)
+  .then((res) => res.json())
+  .catch(console.error);
 ---
 
 <Layout title="Play">
@@ -160,7 +176,7 @@ const topTravelImages = shuffle(travelImages.slice()).slice(0, 7);
       a glimpse of my affinity towards musical genres from the last few years:
     </p>
     <div class="my-6">
-      <WordCloud json={json as SpotifyArtists} client:only="react" />
+      <WordCloud json={spotifyData as SpotifyArtists} client:only="react" />
     </div>
     This is based on my data on Spotify and you can generate a similar one through
     my <a
@@ -180,10 +196,10 @@ const topTravelImages = shuffle(travelImages.slice()).slice(0, 7);
     <h1 id="games" class="text-2xl my-6">Video games</h1>
     <p class="text-base mt-6">
       I've grown up with video games! The Switch has been the perfect device in
-      jumping in here and there to satisfy the gaming itch with a busy life.
-      Here are a few top class experiences that have kept me thrilled in the
-      last couple years, with screenshots from my Switch. Click on the
-      disclaimer for the screenshots.
+      jumping in here and there to satisfy the gaming itch with a busy life, and
+      the PS5 is fantastic at home. Here are a few experiences that have kept me
+      entertained in the last couple years. Click on the disclaimer for the
+      screenshots.
     </p>
     <div
       tabindex="0"
@@ -200,5 +216,5 @@ const topTravelImages = shuffle(travelImages.slice()).slice(0, 7);
         </div>
       </div>
     </div>
-
+  </p>
 </Layout>
