--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,13 +17,20 @@
     <a class="mx-2" href="https://github.com/mtanzim" target="_blank">
       <img class="w-6 h-6" src="/icons/github.svg" />
     </a>
-    <button class="md:hidden goTop"
-      ><img class="w-6 h-6" src="/icons/up.svg" /></button
+    <button
+      class="btn btn-outline btn-sm btn-nav mx-4 md:hidden"
+      onclick={`chat_modal.showModal()`}>Ask an AI</button
     >
+    <button class="goTop md:hidden"><img class="w-6 h-6" src="/icons/up.svg" /></button>
   </div>
+
   <div
     class="grid-flow-col gap-4 hidden md:place-self-center md:justify-self-end md:block"
   >
+    <button
+      class="btn btn-outline btn-sm btn-nav mx-4"
+      onclick={`chat_modal.showModal()`}>Ask an AI</button
+    >
     <button class="goTop"><img class="w-6 h-6" src="/icons/up.svg" /></button>
   </div>
 </footer>
@@ -33,8 +40,8 @@
     const buttons = document.querySelectorAll(".goTop");
     buttons.forEach((b) =>
       b.addEventListener("click", () =>
-        window.scrollTo({ top: 0, behavior: "smooth" }),
-      ),
+        window.scrollTo({ top: 0, behavior: "smooth" })
+      )
     );
   };
   setupGoTop();
