--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -19,7 +19,7 @@ import { Image } from "astro:assets";
         </p>
         <p class="py-2">
           You can also ask a <button
-            class="badge badge-info"
+            class="badge badge-info mx-1"
             onclick={`chat_modal.showModal()`}>chatbot</button
           >questions about this website.
         </p>
