fix ui for chatbot modal

--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -17,20 +17,15 @@
     <a class="mx-2" href="https://github.com/mtanzim" target="_blank">
       <img class="w-6 h-6" src="/icons/github.svg" />
     </a>
-    <button
-      class="btn btn-outline btn-sm btn-nav mx-4 md:hidden"
-      onclick={`chat_modal.showModal()`}>Ask an AI</button
+
+    <button class="goTop md:hidden"
+      ><img class="w-6 h-6" src="/icons/up.svg" /></button
     >
-    <button class="goTop md:hidden"><img class="w-6 h-6" src="/icons/up.svg" /></button>
   </div>
 
   <div
     class="grid-flow-col gap-4 hidden md:place-self-center md:justify-self-end md:block"
   >
-    <button
-      class="btn btn-outline btn-sm btn-nav mx-4"
-      onclick={`chat_modal.showModal()`}>Ask an AI</button
-    >
     <button class="goTop"><img class="w-6 h-6" src="/icons/up.svg" /></button>
   </div>
 </footer>
