--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -1,5 +1,4 @@
 ---
-
 // TODO: hamburger menu for mobile
 const pages = [
   {
@@ -28,7 +27,6 @@ const pages = [
 
 <!-- desktop nav bar -->
 <>
-
   <div class="hidden lg:flex flex-wrap navbar bg-base-100 mb-8 lg:visible">
     <div class="flex-1">
       <a href="/" class="btn btn-ghost normal-case text-xl">
@@ -47,7 +45,11 @@ const pages = [
         }
       </ul>
       <button
-        class="btn btn-accent btn-outline btn-xs mx-4"
+        class="btn btn-info btn-outline btn-xs my-4"
+        onclick={`chat_modal.showModal()`}>Ask an AI</button
+      >
+      <button
+        class="btn btn-accent btn-outline btn-xs mx-2"
         data-toggle-theme="dracula,light"
         data-act-class="ACTIVECLASS"
       >
@@ -81,7 +83,11 @@ const pages = [
           </ul>
         </div>
         <button
-          class="btn btn-accent btn-outline btn-xs mx-4 my-4"
+          class="btn btn-info btn-xs my-4 mx-4"
+          onclick={`chat_modal.showModal()`}>Ask an AI</button
+        >
+        <button
+          class="btn btn-accent btn-xs my-4"
           data-toggle-theme="dracula,light"
           data-act-class="ACTIVECLASS"
         >
@@ -91,4 +97,3 @@ const pages = [
     </div>
   </div>
 </>
-
