--- a/src/components/Navigation.astro
+++ b/src/components/Navigation.astro
@@ -50,7 +50,7 @@ const pages = [
       ><BotMessageSquare size={24} className="mx-4" /></span
     >
     <Lightbulb
-      data-toggle-theme="dracula,lght"
+      data-toggle-theme="dracula,light"
       data-act-class="ACTIVECLASS"
       className="mx-4"
       size={24}
